@@ -6,10 +6,11 @@ JP3D_MAJOR = 1
 JP3D_MINOR = 3
 JP3D_BUILD = 0
 
-prefix=/usr/local/OPJ646
+prefix=/usr/local
 CC = gcc
-
-#Set this to yes if you want to compile/install shared libs.
+LDCONFIG = /sbin/ldconfig
+#
+#Set this to no if you do no want to compile/install shared libs.
 ENABLE_SHARED = yes
 #
 #Set to yes if you BOTH have the library AND the header
@@ -18,19 +19,19 @@ ENABLE_SHARED = yes
 #==== HAVE YOU CREATED opj_config.h FROM opj_config.h.in.user ? ====
 #==== SHOULD BE IN SYNC WITH opj_config.h ====
 WITH_LCMS1 = no
-WITH_LCMS2 = yes
-WITH_PNG = yes
-WITH_TIFF = yes
+WITH_LCMS2 = no
+WITH_PNG = no
+WITH_TIFF = no
 #
 # Set to yes if you want compile/install 
 #    jpwl libraries/binaries
 #    jp3d libraries/binaries
-WITH_JPWL = yes
-WITH_JP3D = yes
+WITH_JPWL = no
+WITH_JP3D = no
 #
 #Set to yes if you have doxygen installed
 #Set to no if doxygen is missing.
-HAS_DOXYGEN = yes
+HAS_DOXYGEN = no
 
 #Check whether these paths are correct; change them appropiatly.
 LCMS1_INCLUDE = -I/usr/include
